--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "venv/bin/python3",
+    "python.pythonPath": "C:\\Users\\firew\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
     "python.testing.pytestArgs": [
         "tests"
     ],
